--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,5 +11,6 @@
 		{% endfor %}
 		</ul>
 	</nav><!-- /.bottom-menu -->
+	<p class="labcontact" style="font-size: small;color: darkgray;"> (34134) 대전광역시 유성구 대학로 99 충남대학교 공과대학 4호관(E4) 514호 영상 시스템 연구실<br>TEL : 042-821-8976</p>
 	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> + <a href="http://mmistakes.github.io/skinny-bones-jekyll/" rel="nofollow">Skinny Bones</a>.</p>
 </footer>
